--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start:dev": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "heroku-postbuild": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -20,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.2.0-beta1",
+    "express": "^4.18.1",
     "igniteui-angular": "^14.0.6",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
